--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<div class="mt-3">
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</div>
 <app-footer></app-footer>
