--- a/src/app/occurrences/occurrence-detail-modal/occurrence-detail-modal.component.html
+++ b/src/app/occurrences/occurrence-detail-modal/occurrence-detail-modal.component.html
@@ -1,22 +1,31 @@
-<h2 mat-dialog-title>Reponder Occurrence #{{data.id}}</h2>
+<h2 mat-dialog-title>Responder Ocorrência #{{data.id}}</h2>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
   <mat-dialog-content class="mat-typography">
-    <div class="example-container">
+
       <mat-form-field>
-        <textarea matInput placeholder="Content" formControlName="content" maxlength="1000" #content></textarea>
-        <mat-hint align="end">{{content.value.length}} / 1000</mat-hint>
+        <textarea matInput placeholder="Conteúdo" formControlName="content" maxlength="1000" #contentTextarea></textarea>
+        <mat-hint align="end">{{contentTextarea.value.length}} / 1000</mat-hint>
+          <mat-error *ngIf="content.errors?.required">
+            Preencha o conteúdo!
+          </mat-error>
+          <mat-error *ngIf="content.errors?.minlength">
+            Mínimo 3 caracteres.
+          </mat-error>
       </mat-form-field>
 
       <mat-form-field>
-        <mat-select placeholder="Select" formControlName="status">
-          <mat-option value="option">Option</mat-option>
+        <mat-select placeholder="Status" formControlName="status">
+          <mat-option *ngFor="let status of statuses" [value]="status">{{ status }}</mat-option>
         </mat-select>
+        <mat-error *ngIf="status.errors?.required">
+          Selecione um item!
+        </mat-error>
       </mat-form-field>
-    </div>
-  </mat-dialog-content>
+
+    </mat-dialog-content>
   <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-button type="submit">Enviar</button>
+    <button mat-stroked-button mat-dialog-close>Cancelar</button>
+    <button mat-stroked-button type="submit" [disabled]="!form.valid">Enviar</button>
     <mat-spinner diameter="20" *ngIf="loading"></mat-spinner>
   </mat-dialog-actions>
 </form>
