--- a/src/app/occurrences/occurrence-list-item/occurrence-list-item.component.html
+++ b/src/app/occurrences/occurrence-list-item/occurrence-list-item.component.html
@@ -1,15 +1,32 @@
-<mat-card>
-  <div class="row">
+<mat-card @items [routerLink]="[ '/occurrences', occurrence.id ]">
+  <div class="row header">
     <div class="col">
-      <span>
-        {{ occurrence.cop.name }}
-        {{ occurrence.patrol.created_at | date: 'dd/MM/yyyy' }}
-      </span>
-      <span class="float-right">
-      <span class="badge" [ngClass]="badgeSelector(occurrence.kind)">Kind: {{ occurrence.kind }}</span>
-      <span class="badge" [ngClass]="badgeSelector(occurrence.status)">Status: {{ occurrence.status }}</span>
-      <i class="fas fa-calendar-alt"></i> {{ occurrence.created_at | date: 'dd/MM/yyyy' }}</span>
+      #{{ occurrence.id }}
     </div>
-    <button mat-stroked-button [routerLink]="[ '/occurrences', occurrence.id ]">Abrir</button>
+    <div class="col">
+      <div class="float-right">
+        <span>{{ occurrence.created_at | date: 'dd/MM/yyyy hh:mm:ss' }}</span>
+        <span class="badge" [ngClass]="badgeSelector(occurrence.kind)">Kind: {{ occurrence.kind }}</span>
+        <span class="badge" [ngClass]="badgeSelector(occurrence.status)">Status: {{ occurrence.status }}</span>
+      </div>
+    </div>
   </div>
+  <section>
+    <div class="row">
+      <div class="col">
+        <span class="title-item">Organização:</span>
+        <span>{{ occurrence?.organization.name }}</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <span class="title-item">Departamento:</span> {{ occurrence?.department.name }}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <span class="title-item">Policial:</span> {{ occurrence?.cop.name }}
+      </div>
+    </div>
+  </section>
 </mat-card>
