--- a/src/app/shared/components/layout/navbar/navbar.component.html
+++ b/src/app/shared/components/layout/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<mat-toolbar color="primary" *ngIf="isLoggedIn$ | async">
+<!-- <mat-toolbar color="primary" *ngIf="isLoggedIn$ | async"> -->
+<mat-toolbar color="primary" *ngIf="true">
   <div class="container">
     <span>Datacop</span>
     <a mat-stroked-button (click)=onLogout()>Logout</a>
