--- a/src/app/occurrences/occurrence-list-item/occurrence-list-item.component.html
+++ b/src/app/occurrences/occurrence-list-item/occurrence-list-item.component.html
@@ -1,31 +1,30 @@
-<mat-card @items [routerLink]="[ '/occurrences', occurrence.id ]">
+<mat-card @items [routerLink]="[ '/occurrences', occurrence?.id ]" class="mat-elevation-z2">
   <div class="row header">
     <div class="col">
-      #{{ occurrence.id }}
+      #{{ occurrence?.id }}
     </div>
     <div class="col">
       <div class="float-right">
-        <span>{{ occurrence.created_at | date: 'dd/MM/yyyy hh:mm:ss' }}</span>
-        <span class="badge" [ngClass]="badgeSelector(occurrence.kind)">Kind: {{ occurrence.kind }}</span>
-        <span class="badge" [ngClass]="badgeSelector(occurrence.status)">Status: {{ occurrence.status }}</span>
+        <span>{{ occurrence?.created_at | date: 'dd/MM/yyyy hh:mm:ss' }}</span>
+        <span class="badge" [ngClass]="badgeSelector(occurrence?.status)">Status: {{ occurrence?.status }}</span>
       </div>
     </div>
   </div>
   <section>
     <div class="row">
       <div class="col">
-        <span class="title-item">Organização:</span>
+        <span class="title-item">Organização: </span>
         <span>{{ occurrence?.organization.name }}</span>
       </div>
     </div>
     <div class="row">
       <div class="col">
-        <span class="title-item">Departamento:</span> {{ occurrence?.department.name }}
+        <span class="title-item">Departamento: </span> {{ occurrence?.department.name }}
       </div>
     </div>
     <div class="row">
       <div class="col">
-        <span class="title-item">Policial:</span> {{ occurrence?.cop.name }}
+        <span class="title-item">Policial: </span> {{ occurrence?.cop.name }}
       </div>
     </div>
   </section>
