--- a/src/app/occurrences/occurrence-list/occurrence-list.component.html
+++ b/src/app/occurrences/occurrence-list/occurrence-list.component.html
@@ -2,59 +2,25 @@
   <div class="col-md-3">
     <mat-card>
       <mat-form-field>
-        <input type="text" matInput placeholder="Buscar" (keyup)=handleSearch($event.target.value)>
+        <input type="text" matInput placeholder="Buscar" [formControl]="searchField">
       </mat-form-field>
 
       <label>Status: </label>
       <mat-radio-group
-        class="radio-group">
-        <mat-radio-button *ngFor="let option of options"
-          [value]="option"
-          (click)="handleSearch(option)">
-          {{option}}
+        class="radio-group" [formControl]="statusesField">
+        <mat-radio-button *ngFor="let status of statuses; let i = index"
+          [value]="i">
+          {{ status }}
         </mat-radio-button>
       </mat-radio-group>
+      {{ search | json }}
     </mat-card>
 
   </div>
   <div class="col">
     <mat-spinner diameter="20" *ngIf="loading; else occurrencesTemplate"></mat-spinner>
     <ng-template #occurrencesTemplate>
-      <div class="mat-elevation-z2">
-        <table mat-table [dataSource]="occurrences$ | async">
-
-          <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef>#</th>
-            <td mat-cell *matCellDef="let occurrence">
-              {{occurrence.id}}
-            </td>
-          </ng-container>
-      
-          <ng-container matColumnDef="department">
-            <th mat-header-cell *matHeaderCellDef>Departamento</th>
-            <td mat-cell *matCellDef="let occurrence"> {{occurrence.department.name}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="cop">
-            <th mat-header-cell *matHeaderCellDef>Policial</th>
-            <td mat-cell *matCellDef="let occurrence"> {{occurrence.cop.description}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>Status</th>
-            <td mat-cell *matCellDef="let occurrence"> {{occurrence.status}} </td>
-          </ng-container>
-      
-          <ng-container matColumnDef="created_at">
-            <th mat-header-cell *matHeaderCellDef>Data de Criação</th>
-            <td mat-cell *matCellDef="let occurrence"> {{occurrence.created_at | date: 'dd/MM/yyyy hh:mm:ss' }} </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-      
-      </div>
+      <app-occurrence-list-item *ngFor="let occurrence of occurrences$ | async" [occurrence]="occurrence"></app-occurrence-list-item>
     </ng-template>
   </div>
 </div>
