--- a/src/app/occurrences/occurrence-list-item/occurrence-list-item.component.html
+++ b/src/app/occurrences/occurrence-list-item/occurrence-list-item.component.html
@@ -14,17 +14,17 @@
     <div class="row">
       <div class="col">
         <span class="title-item">Organização: </span>
-        <span>{{ occurrence?.organization.name }}</span>
+        <span>{{ occurrence?.organization?.name }}</span>
       </div>
     </div>
     <div class="row">
       <div class="col">
-        <span class="title-item">Departamento: </span> {{ occurrence?.department.name }}
+        <span class="title-item">Departamento: </span> {{ occurrence?.department?.name }}
       </div>
     </div>
     <div class="row">
       <div class="col">
-        <span class="title-item">Policial: </span> {{ occurrence?.cop.name }}
+        <span class="title-item">Policial: </span> {{ occurrence?.cop?.name }}
       </div>
     </div>
   </section>
