--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -17,10 +17,15 @@ body {
 .form-signin {
   width: 100%;
   max-width: 330px;
-  padding: 15px;
+  padding: 2rem;
   margin: auto;
 }
 
 button {
   width: 100%;
+}
+
+form {
+  background-color: white;
+  border-radius: 4px;
 }
