--- a/src/app/occurrences/occurrence-detail/occurrence-detail.component.scss
+++ b/src/app/occurrences/occurrence-detail/occurrence-detail.component.scss
@@ -17,3 +17,8 @@ header-detail {
     padding: 0 .3rem;
   }
 }
+mat-chip-list span {
+  margin: .3rem 0
+}
+
+.material-icons { font-size: 1rem; height: 1rem; width: 1rem; margin: 1rem; }
