--- a/src/app/occurrences/occurrence-list-item/occurrence-list-item.component.scss
+++ b/src/app/occurrences/occurrence-list-item/occurrence-list-item.component.scss
@@ -1,5 +1,5 @@
 mat-card {
-  margin: .3rem 0px;
+  margin: 0 0 .3rem 0;
   &:hover {
     cursor: pointer;
     background-color: rgba(0, 0, 0, .1);
