--- a/src/app/shared/components/layout/navbar/navbar.component.html
+++ b/src/app/shared/components/layout/navbar/navbar.component.html
@@ -1,9 +1,40 @@
-<!-- <mat-toolbar color="primary" *ngIf="isLoggedIn$ | async"> -->
-<mat-toolbar color="primary" *ngIf="true">
-  <div class="container">
-    <span>Datacop</span>
-    <a mat-stroked-button (click)=onLogout()>Logout</a>
-    <a mat-stroked-button [routerLink]="['/occurrences']" routerLinkActive="active">Ocorrências</a>
-    <a mat-stroked-button [routerLink]="['/organizations']" routerLinkActive="active">Organizações</a>
-  </div>
+<mat-toolbar *ngIf="isLoggedIn$ | async">
+  {{ isLoggedIn$ | async | json }}
+  <mat-toolbar-row class="first-row">
+      <div class="container">
+        <span>Datacop</span>
+        <a mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+          <mat-icon>more_vert</mat-icon>
+        </a>
+        <a mat-stroked-button [routerLink]="['/occurrences']" routerLinkActive="active">Ocorrências</a>
+        <!-- <a mat-stroked-button [routerLink]="['/cops']" routerLinkActive="active">Policiais</a> -->
+        <!-- <a mat-stroked-button [routerLink]="['/organizations']" routerLinkActive="active">Organizações</a> -->
+      </div>
+    </mat-toolbar-row>
+
+    <mat-toolbar-row class="second-row">
+      <div class="container">
+        <button mat-icon-button routerLinkActive="active" [routerLink]="['/cops']" matTooltip="cops">
+          <mat-icon>home</mat-icon>
+        </button>
+        <button mat-icon-button routerLinkActive="active" [routerLink]="['/organizations']">
+          <mat-icon>business</mat-icon>
+        </button>
+        <button mat-icon-button routerLinkActive="active" [routerLink]="['/occurrences']">
+          <mat-icon>notification_important</mat-icon>
+        </button>
+      </div>
+    </mat-toolbar-row>
 </mat-toolbar>
+
+<mat-menu #menu="matMenu">
+  
+  <button mat-menu-item [routerLink]="['/profile']">
+    <mat-icon>account_box</mat-icon>
+    <span>Perfil</span>
+  </button>
+  <button mat-menu-item (click)=onLogout()>
+    <mat-icon>exit_to_app</mat-icon>
+    <span>Sair</span>
+  </button>
+</mat-menu>
